samples/_failures_safe/1761622930_d98e49_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e1e90ae.c: In function ‘main’:
./samples/SAFE/__tmp_1e1e90ae.c:140:9: error: expected declaration or statement at end of input
  140 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_1e1e90ae.c:140:9: error: expected declaration or statement at end of input
